--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -948,107 +948,107 @@ stories:
   domain: http://www.westword.com/
   link: https://www.westword.com/music/the-history-of-the-red-rocks-piece-of-the-rock-award-11394822
 images:
-- name: old-school-house-old-schoolhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-electricity.jpg
-- name: bordercrossing-bordercrossing-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-pablo-blue.jpg
-- name: containership-containership-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-monet-one.jpg
-- name: border-fence-border-fence-on-hill-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-ww2-color.jpg
-- name: nyc-flag-nycflag-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colorful-blocks.jpg
-- name: subway-subway-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-clean-view.jpg
-- name: cargo-ship-cargo-ship-on-sea-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-smoking-cigarette.jpg
-- name: windowmountain-window-mountain-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-purp-paper.jpg
-- name: old-church-oldchurch-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-aqua.jpg
-- name: san-francisco-street-view-san-francisco-street-view-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-creativity.jpg
-- name: dragon_close-up-udnie.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-udnie.jpg
-- name: capital-battle-capitolbattle-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dark-soul.jpg
-- name: paris-paris-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-wols.jpg
-- name: containership-containership-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-constitution.jpg
-- name: mosaic-face-mosaic-face-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dali-three.jpg
-- name: yosemite-yosemite-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-diego-rivera1.jpg
-- name: walled-garden-walled-garden-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-aqua.jpg
-- name: art-museum-art-museum-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-sand-paper.jpg
-- name: machine-road-machine-road-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-atari-missle.jpg
-- name: power-lines-power-lines-empty-space-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-ww2-color.jpg
-- name: san-francisco-street-view-san-francisco-street-view-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-deep-connections.jpg
-- name: gears-4882162452-fa3126b38d-b-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-creativity.jpg
-- name: white-house-lawn-white-house-lawn-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-mucha-mult.jpg
-- name: san-francisco-street-view-san-francisco-street-view-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-rainbow-festival.jpg
-- name: downtown-los-angeles-downtown-la-yellow-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-yellow-paper.JPG
-- name: white-house-whitehouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dali-three.jpg
-- name: old-door-lock-old-door-lock-2-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-spagetti-accident.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
-- name: razorcliff-razorcliff-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-wols.jpg
-- name: amusement-park-amusement-park-2-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dali-three.jpg
-- name: dragon-desert-desert-dragon-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dry-skin.jpg
-- name: blossombar-dark-rain-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-50-62.jpg
-- name: san-francisco-street-view-san-francisco-street-view-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crabapple.jpg
-- name: beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-- name: bluelake-blue-granite-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-granite-file-00-00-00-00.jpg
-- name: old-school-house-old-schoolhouse-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smoking-cigarette.jpg
-- name: machine-road-machine-road-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-bright-sand.jpg
-- name: udnie-IMG_4746.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4746.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-creativity.jpg
-- name: downtown-los-angeles-downtown-la-matrix.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-matrix.JPG
-- name: eduardo-eduardo-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-bright-sand.jpg
-- name: docks-docks-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-two.jpg
-- name: fence-mexico-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colorful-dream.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth.png
-- name: amusement-park-amusement-park-2-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-graham-sutherland.jpg
-- name: nyc-flag-nycflag-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-umberto-bocc.jpg
-- name: old-gas-pumps-oldgaspumps-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-space-pizza.jpg
-- name: containership-containership-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-atari-asteroids.jpg
-- name: flower-barbed-wire-flower-barbed-wire-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-kandinsky-bv.jpg
-- name: liberty-back-statue-liberty-back-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-soul.jpg
-- name: server-cloud-server-racks-door-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-3.jpg
+- name: border-crossing-bordercrossing-colorful-dream.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colorful-dream.png
+- name: old-granary-field-granaryfield-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-alien-goggles.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-light-dali.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-smooth-ride.jpg
+- name: old-granary-field-granaryfield-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-crafty-painting.jpg
+- name: gypsy-wagon-gypsywagon-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-constitution.jpg
+- name: razorcliff-razorcliff-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-constitution.jpg
+- name: flower-barbed-wire-flower-barbed-wire.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire.jpg
+- name: old-house-oldhouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-crabapple.jpg
+- name: fence-fence-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-far-away.jpg
+- name: capital-battle-capitolbattle-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-gan-vogh.jpg
+- name: sand-hand-sand-hand-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-space-pizza.jpg
+- name: yosemite-yosemite-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-internet-numbers.jpg
+- name: ellis-island-ellis-island-room-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-cinnamon-rolls.jpg
+- name: locked-up-steam-lock-up-steam-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-graham-sutherland.jpg
+- name: server-cloud-server-racks-clouds-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dark-soul.jpg
+- name: containership-containership-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-spagetti-accident.jpg
+- name: nazi-invasion-DSC_0079.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0079.jpg
+- name: cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
+- name: machine-road-machine-road-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit.jpg
+- name: walled-garden-walled-garden-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-spagetti-accident.jpg
+- name: oldsmallboat-oldsmallboat-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-satan-red.jpg
+- name: berlinwall2-berlinwall-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dali-two.jpg
+- name: castle-wall-DSC-0067-blue-brush.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-brush.JPG
+- name: razorwire-DSC-0080-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-gan-vogh.jpg
+- name: old-school-house-old-schoolhouse-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-propaganda-leaflets.jpg
+- name: rockingchair-rockingchair-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-plentiful.jpg
+- name: downtheline-downtheline-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-neo-instinct.jpg
+- name: fence-mexico-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colorful-blocks.jpg
+- name: oldroad-old-road-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-marcel-duchamp.jpg
+- name: server-cloud-server-racks-door-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-oily-mcoilface.jpg
+- name: stories-window-mountain-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-window-mountain-clean-view.jpg
+- name: aws-s3-stories-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-diego-rivera1.jpg
+- name: stories-new-79-110-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-79-110-800-500-0-max-0--5--1.jpg
+- name: razorcliff-razorcliff-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-brush.jpg
+- name: trucksilo-trucksilo-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-smoking-cigarette.jpg
+- name: mediterranean-mediterranean-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-yellow-paper.jpg
+- name: stories-adam-smith-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-adam-smith-blue-circuit.jpg
+- name: dragon-desert-desert-dragon-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-wols.jpg
+- name: old-barn-old-barn-1500-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-creativity.jpg
+- name: aws-s3-stories-power-lines-empty-space-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-power-lines-empty-space-copper-circuit.jpg
+- name: blossombar-purple-storm-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-00-00.jpg
+- name: old-granary-field-granaryfield-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-alberto-giacometti.jpg
+- name: gears-4882162452-fa3126b38d-b-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-gan-vogh.jpg
+- name: castle-wall-DSC-0067-mucha-mult.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-mucha-mult.JPG
+- name: store-on-corner-oldcabin-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-two.jpg
+- name: abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-15-87.jpg
+- name: oldbarn-oldbarn-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-granite.jpg
+- name: wind-mills-windmills-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-crunch-paper.jpg
+- name: yosemite-yosemite-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-soul.jpg
+- name: death-valley-death-valley-national-park-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-space-pizza.jpg
 ---
 Training Rides Begin For Martindales Mamma Jamma Fundraiser.&nbsp;Val Chmerkovskiy And Jenna Johnson Celebrate Second Wedding.&nbsp;Tracking Chicago Homicide Victims.&nbsp;Outside Audit Says Facebook Is Falling Short In Combating Hate Speech.&nbsp;Individual Manchester Football Shirts.&nbsp;Company Profile For BentallGreenOak.&nbsp;Torrington Mans Gun Hobby Turns Into A Business.&nbsp;China State Media Run Footage Of Hong Kong Protests.&nbsp;
